--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -3,9 +3,19 @@
     padding: 0;
 }
 
+.wrapper{
+    min-height: 120vh;
+    height: 120vh;
+}
+
+li{
+    list-style: none;
+    text-align: center;
+}
+
 a{
     text-decoration: none;
-    color:red;
+    color:black;
 }
 
 a:hover{
