--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -1,27 +1,67 @@
+.wrapper{
+    height: 120vh;
+}
 .overall_container {
     display: flex;
+    height: 50%;
 }
 
 .smaller_container:first-child{
-    flex:20%;
+    flex: 1 0 20%;
+    align-self: flex-start;
+    position: sticky;
+    display: none;
+    position: -webkit-sticky; 
+    height:100%;
+    top: 0;
+    z-index: 999999;  
+}
+
+.smaller_container:first-child.open{
+    display: block;
 }
 
 .nav {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
 }
 
 .nav li{
     font-size: 2em;
-    padding: 1em 1em;
+    padding: .5em 1em;
 }
 
 .smaller_container:nth-child(2){
-    flex: 115%;
+    flex: 2 0 80%;
+}
+
+.hamburger_container {
+    position: absolute;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background: rgba(0,0,0,0.3);
+}
+
+.hamburger_container.open{
+    width: 80%;
+}
+
+.hamburger_container h1, .hamburger_container .burger_menu {
+    color: #fff;
+    font-family: Dancing Script;
+    padding: 0em 2em;
+}
+
+.hamburger_container .burger_menu {
+    margin-left: auto;
+    padding: 0em 4em;
 }
 
 .smaller_container:nth-child(2) img {
-    width: 78vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
