--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -65,3 +65,15 @@
     width: 100%;
     height: 100%;
 }
+
+@media ( max-width: 600px ) {
+
+    .hamburger_container h1{
+        margin-left: 34vw;
+    }
+
+    .smaller_container:nth-child(2) img {
+        height: 60%;
+    }
+
+}
