Added the sidebar Nav and fixed it to work properly

--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -88,6 +88,11 @@
         display:none;
     }
 
+    .logo {
+        display: flex;
+        justify-content: center;
+    }
+
     .smaller_container:first-child.open{
         flex: 1 0 20%;
         display: block;
