--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -1,10 +1,10 @@
 .wrapper{
-    height: 120vh;
+    height: 840vh;
 }
 
 .overall_container {
     display: flex;
-    height: 50%;
+    height: 110vh;
 }
 
 .smaller_container:first-child{
@@ -53,12 +53,13 @@
 }
 
 .smaller_container:nth-child(2) img {
-    width: 100%;
-    height: 100%;
+    width: 78vw;
+    height: 100vh;
 }
 
 .Colour_Of_Month_Container {
     display: flex;
+    margin-top: 2em;
     flex-wrap: wrap;
 }
 
@@ -74,7 +75,6 @@
 }
 
 .colour_sm_container:nth-child(2) {
-    background: pink;
     display: flex;
     flex-wrap: wrap;
     flex: 2 0 80%;
@@ -87,8 +87,8 @@
     justify-content: center;
 }
 .circle {
-    height: 19vh;
-    width: 34vw;
+    height: 40vh;
+    width: 25vw;
     margin: 2em;
     border-radius: 50%;
     background: blue;
@@ -98,21 +98,20 @@
     flex: 1 0 100%;
     display: flex;
     justify-content: center;
-    background: blue;
 }
 
-.colour_of_month_collage {
-    height: 100%;
-    background: blue;
+.colour_of_month_collage img {
+    width: 49vw;
 }
 
 @media ( max-width: 600px ) {
     .overall_container {
-        height: 20%;
+        height: 60vh;
     }
 
     .smaller_container:nth-child(2) img {
-        height: 85%;
+        height: 50vh;
+        width : 100vw;
     }
 
     .hamburger_container{
@@ -162,6 +161,15 @@
         visibility: hidden;
         position: absolute;
         left: 0;
+    }
+
+    .circle {
+        height: 20vh;
+        width: 35vw;
+    }
+
+    .colour_of_month_collage img {
+        width: 49vw;
     }
 
     
