--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -109,6 +109,52 @@
     width: 33vw;
 }
 
+.Coffee_Pics_Container {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 4em 0em;
+    padding: 2em 2em;
+}
+
+.coffee_sm_pics_container {
+    flex: 1 0 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.coffee_sm_pics_container:first-child {
+    flex-direction: unset;
+    justify-content: space-evenly;
+}
+
+
+.coffee_sm_pics_container img{
+    width:40vw;
+    height: 60vh;
+    margin-left: 6em;
+    
+}
+
+.coffee_sm_pics_container:nth-child(2) {
+    text-align: center;
+}
+
+.coffee_sm_pics_container h1 {
+    font-family: fantasy;
+    margin-bottom: 1em;
+}
+
+.coffee_sm_pics_container a {
+    padding: 1.2em 1em;
+    background: white;
+    width: 12vw;
+    color: darksalmon;
+    border: 2px solid #eee;
+    font-weight: 600;
+    margin: 0 auto;
+}
+
 @media ( max-width: 600px ) {
     .overall_container {
         height: 60vh;
@@ -176,6 +222,11 @@
     .colour_of_month_collage img {
         width: 49vw;
     }
+
+    .Coffee_Pics_Container {
+        flex-wrap: wrap;
+    }
+
 
     
 
