Mobile version and Web Version are all up to date

--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -169,6 +169,12 @@
         height: 60vh;
     }
 
+    .overall_container.open ~ .Coffee_Pics_Container , .overall_container.open ~ .Yellow_Pics_Container , .overall_container.open ~ .Blue_Pics_Container , .overall_container.open ~ .Abstract_Pics_Container , .overall_container.open ~ .Colour_Of_Month_Container {
+        visibility: hidden;
+        position: absolute;
+        left: 0;
+    }
+
     .smaller_container:nth-child(2) img {
         height: 50vh;
         width : 100vw;
@@ -222,6 +228,8 @@
         position: absolute;
         left: 0;
     }
+
+    
 
     .circle {
         height: 20vh;
