--- a/Resources/CSS/shop.css
+++ b/Resources/CSS/shop.css
@@ -59,12 +59,106 @@
 
 .Shop_Main_Container{
     display: flex;
+    flex-wrap: wrap;
+    height: 110vh;
+    padding: 2em;
+}
+
+.Shop_Main_sm_container h1{
+    font-family: fantasy;
+    font-size: 2.2em;
+    text-align: center;
+}
+
+.Shop_Main_sm_container:first-child{
+    display:flex;
+    margin-bottom: 1em;
+    width: 100vw;
+    flex-direction: column;
+}
+.sort_options_container{
+   display: none;
+}
+.filter_sort_mobile_btns{
+    display:none;
+}
+
+.Shop_Main_sm_container:nth-child(2) {
+    display: flex;
+}
+
+.shop_sm_container:first-child{
+    flex: 1 0 20%;
+    height:100%;
+    margin-right: 2em;
+    display: flex;
+    flex-direction: column;
+
+}
+/* .shop_sm_container:first-child == .Filter_Container */
+
+.Price_sm_filter_container, .Colour_sm_filter_container, .Type_sm_filter_container {
+    margin-bottom: 2em;
+}
+
+.Type_sm_filter_container input {
+    margin-right: .5em;
+}
+
+.shop_sm_container:nth-child(2){
+    flex: 2 0 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/* .shop_sm_container:nth-child(2) == .Products_Container */
+
+.Products_Container img {
+    width: 17vw;
+    height: 38vh;
+}
+
+.Product_Details {
+    padding-bottom: 2em;
+}
+
+.Quick_View_Container {
+    position: absolute;
+    width: 42vw;
+    top: 130vh;
+    height: 81vh;
+}
+
+.Quick_View_Container img {
+    width: 42vw;
+    height: 81vh;
+}
+
+.Dismiss_btn {
+    position: absolute;
+    background: white;
+    top: 1vh;
+    left: 37vw;
+    padding: 1em 1.3em;
+    border-radius: 70%;
+}
+
+.Product_sm_bar {
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
-.Shop_Main_Container h1{
-    font-family: fantasy;
-    font-size: 2.2em;
+.Product_sm_bar a {
+    margin-left: 1em;
+}
+
+.Product_Actual_Details {
+    display: flex;
+    padding: 1em 1em;
+    align-items: center;
+    flex-direction: column;
 }
 
 
@@ -135,4 +229,68 @@
         position: absolute;
         left: 0;
     }
+    .Shop_Main_Container{
+        padding: unset;
+    }
+
+    .Shop_Main_sm_container:nth-child(2){
+        flex-wrap: wrap;
+        margin-top: 2em;
+    }
+    
+    .shop_sm_container:first-child{
+        display: none;
+    }
+
+
+    .filter_sort_mobile_btns {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .filter_mobile, .sort_mobile {
+        padding: 1em 2em;
+        border: 2px solid #eee;
+    }
+    .sort_mobile{
+        display: flex;
+        
+    }
+    .pointer{
+        font-size: 1.4em;
+    }
+    .filter_mobile h2, .sort_mobile h2 {
+       font-size: 1.1em;
+       font-weight: 100;
+    }
+    .sort_mobile h2{
+        margin-right: 1em;
+    }
+    .sort_options_container.open {
+        display: unset;
+        position: absolute;
+        width: 31vw;
+        top: 75vh;
+        left: 56vw;
+        background: white;
+        padding: 1em 0.7em;
+        border: 1px solid #eee;
+    }
+    .sort_options_container.open ul li {
+        padding: 1em 0em;
+        font-size: 0.8em;
+    }
+    .sort_options_container.open ul li:hover{
+        background: burlywood;
+        color: white;
+    }
+    .Filter_Container.open{
+        display:unset;
+        height: unset;
+        padding-left: 2em;
+    }
+    .Products_Container img {
+        width: 49vw;
+    }
+    
 }
