--- a/Resources/CSS/footer.css
+++ b/Resources/CSS/footer.css
@@ -1,6 +1,8 @@
-.footer{
+.footer {
     display: flex;
     justify-content: center;
-    background : yellow;
-    padding: 2em 0;
+    background: black;
+    color: white;
+    padding: 3em 0;
 }
+
