Fixed the font size on phone

--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -154,6 +154,7 @@
 
     .coffee_sm_pics_container h1, .yellow_sm_pics_container h1, .blue_sm_pics_container h1, .abstract_sm_pics_container h1 {
         font-size: .6em;
+        font-family: Quicksand;
     }
 
     .yellow_sm_pics_container:nth-child(2) , .abstract_sm_pics_container:nth-child(2){
