Fixed the font size on phone

--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -153,7 +153,7 @@
     }
 
     .coffee_sm_pics_container h1, .yellow_sm_pics_container h1, .blue_sm_pics_container h1, .abstract_sm_pics_container h1 {
-        font-size: .6em;
+        font-size: 1.3em;
         font-family: Quicksand;
     }
 
