--- a/Resources/CSS/header.css
+++ b/Resources/CSS/header.css
@@ -97,7 +97,7 @@
         height: 60vh;
     }
 
-    .overall_container.open ~ .Coffee_Pics_Container , .overall_container.open ~ .Yellow_Pics_Container , .overall_container.open ~ .Blue_Pics_Container , .overall_container.open ~ .Abstract_Pics_Container , .overall_container.open ~ .Colour_Of_Month_Container {
+    .overall_container.open ~ .Coffee_Pics_Container , .overall_container.open ~ .Yellow_Pics_Container , .overall_container.open ~ .Blue_Pics_Container , .overall_container.open ~ .Abstract_Pics_Container , .overall_container.open ~ .Colour_Of_Month_Container , .overall_container.open ~ .About_Container{
         display: none;
         position: absolute;
         left: 0;
