--- a/Resources/CSS/header.css
+++ b/Resources/CSS/header.css
@@ -96,8 +96,25 @@
     .overall_container {
         height: 60vh;
     }
+    .wrapper.open{
+        min-height: 100vh;
+        height: 100vh;
+    }
 
-    .overall_container.open ~ .Coffee_Pics_Container , .overall_container.open ~ .Yellow_Pics_Container , .overall_container.open ~ .Blue_Pics_Container , .overall_container.open ~ .Abstract_Pics_Container , .overall_container.open ~ .Colour_Of_Month_Container , .overall_container.open ~ .About_Container{
+    .wrapper.open > 
+    .overall_container > 
+    .smaller_container:first-child.open > 
+    .nav {
+        height: 70%;
+    }
+
+    .overall_container.open ~ .Coffee_Pics_Container , 
+    .overall_container.open ~ .Yellow_Pics_Container ,
+    .overall_container.open ~ .Blue_Pics_Container , 
+    .overall_container.open ~ .Abstract_Pics_Container , 
+    .overall_container.open ~ .Colour_Of_Month_Container , 
+    .overall_container.open ~ .About_Container , 
+    .overall_container.open ~ .Contact_Details_Container{
         display: none;
         position: absolute;
         left: 0;
