Starting to Make the Checkout and Payment Integration

--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -3,6 +3,18 @@
     padding: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p
+a{
+    font-weight: 400;
+    font-family: sans-serif;
+}
+
 .wrapper{
     min-height: 200vh;
     max-height: 1805vh;
