--- a/Resources/CSS/productView.css
+++ b/Resources/CSS/productView.css
@@ -95,12 +95,14 @@
     .btn-product-view, .btn-product-view.cart {
         padding: 1.2em .5em;
         margin: 1em .3em;
+        color: white;
     }
     .add-to-cart{
         order:-1;
     }
     .btn-product-view.cart{
         padding: 1.2em 1.6em;
+        color: white;
     }
 
 }
