Got the Paypal Working and All Pages Styled for Responsive Layout

--- a/Resources/CSS/productView.css
+++ b/Resources/CSS/productView.css
@@ -98,11 +98,11 @@
         color: white;
     }
     .add-to-cart{
-        order:-1;
+        /* order:-1; */
     }
     .btn-product-view.cart{
         padding: 1.2em 1.6em;
-        color: white;
+        color: red;
     }
 
 }
