--- a/Resources/CSS/productView.css
+++ b/Resources/CSS/productView.css
@@ -98,7 +98,7 @@
         color: white;
     }
     .add-to-cart{
-        /* order:-1; */
+        order:-1;
     }
     .btn-product-view.cart{
         padding: 1.2em 1.6em;
