--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -35,6 +35,12 @@ a:hover{
     text-decoration: none;
 }
 
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 input[type="text"], 
 input[type="email"] , 
 input[type="tel"] ,
@@ -54,6 +60,7 @@ input[type="submit"] {
 b{
     color: pink;
 }
+
 
 
 @media ( max-width: 600px ) {
