--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -54,6 +54,7 @@ textarea{
 
 input[type="submit"] {
     /* all: unset; */
+    border-radius: unset;
     cursor: pointer;
     font-size: 1em;
 }
