--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -35,11 +35,11 @@ a:hover{
     text-decoration: none;
 }
 
-input {
-    -webkit-appearance: none;
+/* input {
+    
     -moz-appearance: none;
     appearance: none;
-}
+} */
 
 input[type="text"], 
 input[type="email"] , 
@@ -54,6 +54,7 @@ textarea{
 
 input[type="submit"] {
     /* all: unset; */
+    -webkit-appearance: none;
     border-radius: unset;
     cursor: pointer;
     font-size: 1em;
