--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -55,6 +55,7 @@ textarea{
 input[type="submit"] {
     /* all: unset; */
     -webkit-appearance: none;
+    border: none;
     border-radius: unset;
     cursor: pointer;
     font-size: 1em;
